# aegoria-rust

./: .gitignore  Cargo.toml  README.md
benches/: pipeline_benchmark.rs
src/: cli.rs  lib.rs  main.rs
src/analyzer/: anomaly_patterns.rs  behavior_engine.rs  correlation.rs  mod.rs  timeline.rs
src/api/: routes.rs  server.rs
src/collector/: authlog_reader.rs  mod.rs  syslog_reader.rs
src/core/: log_source.rs  mod.rs  risk_score.rs  telemetry_event.rs
src/parser/: auth_parser.rs  log_parser.rs  mod.rs
src/reports/: mod.rs  recommendation_engine.rs  report_builder.rs
src/risk/: mod.rs  scoring_engine.rs
src/streaming/: log_watcher.rs  mod.rs  stream_engine.rs
src/threat_intel/: intel_engine.rs  ip_reputation.rs  mod.rs
src/utils/: config.rs  time.rs
tests/: dataset_pipeline_test.rs  pipeline_test.rs
